<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon = "@drawable/ic_baseline_star_white_36dp"
        app:showAsAction="always" />
    <group android:menuCategory="container">
        <item
            android:id="@+id/action_settings"
            android:title="@string/settings"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_about"
            android:title="@string/about"
            app:showAsAction="never"/>
    </group>
</menu>
